--- a/iOSCommonUI/FeedBack/FeedBackView.xib
+++ b/iOSCommonUI/FeedBack/FeedBackView.xib
@@ -6,29 +6,19 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FeedBackView" customModule="iOSCommonUI" customModuleProvider="target">
-            <connections>
-                <outlet property="btnStar1" destination="94m-q4-Xdp" id="nKG-Jt-Lh5"/>
-                <outlet property="btnStar2" destination="rb3-At-dQk" id="vlO-fP-NuR"/>
-                <outlet property="btnStar3" destination="985-n0-7Nj" id="gFD-eh-N5t"/>
-                <outlet property="btnStar4" destination="Idq-FE-5pc" id="uT4-2K-OPe"/>
-                <outlet property="btnStar5" destination="lmu-hP-RHd" id="jqV-Ia-NTi"/>
-                <outlet property="btnSubmit" destination="4TF-Od-GNJ" id="xl4-JS-IZO"/>
-                <outlet property="textField" destination="Rp1-Md-3RU" id="kn2-12-964"/>
-                <outlet property="textView" destination="aLU-zV-Z1I" id="d47-cb-ekK"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FeedBackView" customModule="iOSCommonUI" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="277" height="346"/>
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT" customClass="FeedBackView" customModule="iOSCommonUI" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="330" height="469"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rp1-Md-3RU" customClass="DesignableTextField" customModule="iOSCommonUI" customModuleProvider="target">
-                    <rect key="frame" x="9" y="9" width="259" height="30"/>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rp1-Md-3RU">
+                    <rect key="frame" x="9" y="20" width="312" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="7Cv-cP-CZj"/>
                     </constraints>
@@ -37,10 +27,10 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="aLU-zV-Z1I" customClass="DesignableTextView" customModule="iOSCommonUI" customModuleProvider="target">
-                    <rect key="frame" x="9" y="48" width="259" height="181"/>
+                    <rect key="frame" x="9" y="59" width="312" height="281.5"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="181" id="McC-HL-evP"/>
+                        <constraint firstAttribute="height" priority="500" constant="181" id="McC-HL-evP"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -57,13 +47,13 @@
                     </userDefinedRuntimeAttributes>
                 </textView>
                 <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O6r-Hc-Ztf">
-                    <rect key="frame" x="9" y="234" width="259" height="55"/>
+                    <rect key="frame" x="9" y="345.5" width="312" height="66.5"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fcy-Ud-cAR">
-                            <rect key="frame" x="0.0" y="0.0" width="51.5" height="55"/>
+                            <rect key="frame" x="0.0" y="0.0" width="62" height="66.5"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="94m-q4-Xdp">
-                                    <rect key="frame" x="0.0" y="0.0" width="51.5" height="55"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="62" height="66.5"/>
                                     <state key="normal" image="star_grey"/>
                                     <state key="selected" image="star_yellow"/>
                                     <connections>
@@ -80,10 +70,10 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nkg-Yi-qoS">
-                            <rect key="frame" x="51.5" y="0.0" width="52" height="55"/>
+                            <rect key="frame" x="62" y="0.0" width="62.5" height="66.5"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rb3-At-dQk">
-                                    <rect key="frame" x="0.0" y="0.0" width="52" height="55"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="62.5" height="66.5"/>
                                     <state key="normal" image="star_grey"/>
                                     <state key="selected" image="star_yellow"/>
                                     <connections>
@@ -100,10 +90,10 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0FH-kf-mIN">
-                            <rect key="frame" x="103.5" y="0.0" width="52" height="55"/>
+                            <rect key="frame" x="124.5" y="0.0" width="63" height="66.5"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="985-n0-7Nj">
-                                    <rect key="frame" x="0.0" y="0.0" width="52" height="55"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="63" height="66.5"/>
                                     <state key="normal" image="star_grey"/>
                                     <state key="selected" image="star_yellow"/>
                                     <connections>
@@ -120,10 +110,10 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RzE-2Y-dnS">
-                            <rect key="frame" x="155.5" y="0.0" width="52" height="55"/>
+                            <rect key="frame" x="187.5" y="0.0" width="62.5" height="66.5"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Idq-FE-5pc">
-                                    <rect key="frame" x="0.0" y="0.0" width="52" height="55"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="62.5" height="66.5"/>
                                     <state key="normal" image="star_grey"/>
                                     <state key="selected" image="star_yellow"/>
                                     <connections>
@@ -140,10 +130,10 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ayU-XZ-lPG">
-                            <rect key="frame" x="207.5" y="0.0" width="51.5" height="55"/>
+                            <rect key="frame" x="250" y="0.0" width="62" height="66.5"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lmu-hP-RHd">
-                                    <rect key="frame" x="0.0" y="0.0" width="51.5" height="55"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="62" height="66.5"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <state key="normal" image="star_grey"/>
                                     <state key="selected" image="star_yellow"/>
@@ -181,6 +171,7 @@
                         <constraint firstItem="Nkg-Yi-qoS" firstAttribute="width" secondItem="0FH-kf-mIN" secondAttribute="width" id="SyZ-UT-5zk"/>
                         <constraint firstItem="Nkg-Yi-qoS" firstAttribute="leading" secondItem="Fcy-Ud-cAR" secondAttribute="trailing" id="axS-3u-7DN"/>
                         <constraint firstItem="0FH-kf-mIN" firstAttribute="width" secondItem="RzE-2Y-dnS" secondAttribute="width" id="cQ8-6k-0Bf"/>
+                        <constraint firstAttribute="width" secondItem="O6r-Hc-Ztf" secondAttribute="height" multiplier="259:55" id="e20-nq-nwZ"/>
                         <constraint firstAttribute="bottom" secondItem="RzE-2Y-dnS" secondAttribute="bottom" id="ffi-Op-3vT"/>
                         <constraint firstItem="ayU-XZ-lPG" firstAttribute="leading" secondItem="RzE-2Y-dnS" secondAttribute="trailing" id="mDc-ty-iKg"/>
                         <constraint firstItem="Fcy-Ud-cAR" firstAttribute="width" secondItem="Nkg-Yi-qoS" secondAttribute="width" id="oOq-G7-SP9"/>
@@ -190,11 +181,14 @@
                     </constraints>
                 </stackView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3IN-gS-jjR">
-                    <rect key="frame" x="0.0" y="297" width="277" height="49"/>
+                    <rect key="frame" x="0.0" y="420" width="330" height="49"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4TF-Od-GNJ" customClass="DesignableButton" customModule="iOSCommonUI" customModuleProvider="target">
-                            <rect key="frame" x="5" y="5" width="267" height="39"/>
+                            <rect key="frame" x="5" y="5" width="320" height="39"/>
                             <color key="backgroundColor" red="0.58039215690000001" green="0.21176470589999999" blue="0.55294117649999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="39" id="nMn-Hr-E76"/>
+                            </constraints>
                             <state key="normal" title="Submit">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
@@ -223,11 +217,11 @@
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.2383347602739726" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="O6r-Hc-Ztf" secondAttribute="trailing" constant="9" id="HLG-ys-kkL"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="O6r-Hc-Ztf" secondAttribute="trailing" constant="9" id="AfV-X7-pZG"/>
                 <constraint firstItem="O6r-Hc-Ztf" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="9" id="MG0-2v-Rje"/>
-                <constraint firstItem="Rp1-Md-3RU" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="9" id="Npg-Ft-75k"/>
+                <constraint firstItem="Rp1-Md-3RU" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="Npg-Ft-75k"/>
                 <constraint firstItem="aLU-zV-Z1I" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="9" id="UKz-Uh-Tld"/>
                 <constraint firstItem="3IN-gS-jjR" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="ZW2-va-s4Z"/>
                 <constraint firstItem="3IN-gS-jjR" firstAttribute="top" secondItem="O6r-Hc-Ztf" secondAttribute="bottom" constant="8" id="a6E-Ju-Z9w"/>
@@ -238,7 +232,6 @@
                 <constraint firstItem="3IN-gS-jjR" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="mDN-Jr-51N"/>
                 <constraint firstItem="O6r-Hc-Ztf" firstAttribute="top" secondItem="aLU-zV-Z1I" secondAttribute="bottom" constant="5" id="p9h-zV-oM0"/>
                 <constraint firstItem="3IN-gS-jjR" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="ydZ-9x-frB"/>
-                <constraint firstItem="3IN-gS-jjR" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="297" id="zyb-ak-w4v"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
@@ -256,7 +249,17 @@
                     <real key="value" value="1"/>
                 </userDefinedRuntimeAttribute>
             </userDefinedRuntimeAttributes>
-            <point key="canvasLocation" x="-34.5" y="-60"/>
+            <connections>
+                <outlet property="btnStar1" destination="94m-q4-Xdp" id="Q32-0z-hQb"/>
+                <outlet property="btnStar2" destination="rb3-At-dQk" id="8rs-WM-keB"/>
+                <outlet property="btnStar3" destination="985-n0-7Nj" id="D2F-SB-Ptl"/>
+                <outlet property="btnStar4" destination="Idq-FE-5pc" id="3q5-g6-7gp"/>
+                <outlet property="btnStar5" destination="lmu-hP-RHd" id="uga-D8-upy"/>
+                <outlet property="btnSubmit" destination="4TF-Od-GNJ" id="mx3-if-spr"/>
+                <outlet property="textField" destination="Rp1-Md-3RU" id="Tt6-C6-96o"/>
+                <outlet property="textView" destination="aLU-zV-Z1I" id="vyQ-ER-DkZ"/>
+            </connections>
+            <point key="canvasLocation" x="-35" y="-94.5"/>
         </view>
     </objects>
     <resources>
