--- a/iOSCommonUI/LoginView/LoginViewGoogleV2.xib
+++ b/iOSCommonUI/LoginView/LoginViewGoogleV2.xib
@@ -17,7 +17,13 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewGoogleV2" customModule="iOSCommonUI" customModuleProvider="target">
             <connections>
-                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="btnForgotPass" destination="8Jp-aI-pyy" id="d40-8y-UT7"/>
+                <outlet property="btnLogin" destination="US6-aW-qPp" id="SRL-mr-NgW"/>
+                <outlet property="btnRegister" destination="YMS-vr-zku" id="z7n-gg-NgN"/>
+                <outlet property="btnSignInGoogle" destination="VQe-i5-GC9" id="yHz-j5-Sfn"/>
+                <outlet property="tfEmailAddress" destination="wKN-J0-pdd" id="ahg-0K-NQm"/>
+                <outlet property="tfPassword" destination="ISM-uF-nVW" id="4xc-x2-Z6y"/>
+                <outlet property="view" destination="i5M-Pr-FkT" id="xoU-1R-fRa"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -26,24 +32,21 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YMS-vr-zku">
-                    <rect key="frame" x="0.0" y="767" width="375" height="45"/>
+                    <rect key="frame" x="0.0" y="752" width="375" height="60"/>
                     <color key="backgroundColor" red="0.4393230676651001" green="0.15688806772232056" blue="0.4322439432144165" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="45" id="Eqt-lh-WDu"/>
+                        <constraint firstAttribute="height" constant="60" id="Eqt-lh-WDu"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <state key="normal" title="Don't have an account? Sign up">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Jp-aI-pyy">
-                    <rect key="frame" x="116" y="627" width="143" height="132"/>
-                    <state key="normal" title="Forgot password?">
-                        <color key="titleColor" red="0.85788784898477155" green="0.85788784898477155" blue="0.85788784898477155" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </state>
+                    <connections>
+                        <action selector="didPressedBtn:" destination="-1" eventType="touchUpInside" id="SmX-CA-xyn"/>
+                    </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zse-ch-S9Z">
-                    <rect key="frame" x="25" y="144" width="325" height="473"/>
+                    <rect key="frame" x="25" y="124" width="325" height="343"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Yj-A5-VUG">
                             <rect key="frame" x="8" y="8" width="91" height="47"/>
@@ -94,7 +97,7 @@
                             <rect key="frame" x="0.0" y="165" width="325" height="65"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PASSWORD" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vKw-Rc-sdA">
-                                    <rect key="frame" x="8" y="8" width="72.666666666666671" height="16"/>
+                                    <rect key="frame" x="8" y="8" width="73" height="16"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
@@ -132,8 +135,8 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bxR-h3-9G1">
                             <rect key="frame" x="0.0" y="280" width="325" height="55"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VQe-i5-GC9" customClass="DesignableButton" customModule="iOSCommonUI" customModuleProvider="target">
-                                    <rect key="frame" x="173" y="0.0" width="145" height="55"/>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VQe-i5-GC9" customClass="DesignableButton" customModule="iOSCommonUI" customModuleProvider="target">
+                                    <rect key="frame" x="183" y="0.0" width="135" height="55"/>
                                     <color key="backgroundColor" red="0.81179056766674607" green="0.27661248432012714" blue="0.31336773652572886" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="width" priority="250" constant="150" id="dZx-bd-y2v"/>
@@ -147,9 +150,12 @@
                                             <real key="value" value="25"/>
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
+                                    <connections>
+                                        <action selector="didPressedBtn:" destination="-1" eventType="touchUpInside" id="iov-Ci-Kzq"/>
+                                    </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="US6-aW-qPp" customClass="DesignableButton" customModule="iOSCommonUI" customModuleProvider="target">
-                                    <rect key="frame" x="8" y="0.0" width="145" height="55"/>
+                                    <rect key="frame" x="8" y="0.0" width="135" height="55"/>
                                     <color key="backgroundColor" red="0.97174853086471558" green="0.65032738447189331" blue="0.12223779410123825" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="55" id="Vaj-VL-5Ax"/>
@@ -164,13 +170,16 @@
                                             <real key="value" value="25"/>
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
+                                    <connections>
+                                        <action selector="didPressedSignInButton:" destination="-1" eventType="touchUpInside" id="WlR-XF-a7R"/>
+                                    </connections>
                                 </button>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="trailing" secondItem="VQe-i5-GC9" secondAttribute="trailing" constant="7" id="1Ho-uZ-GfC"/>
                                 <constraint firstItem="VQe-i5-GC9" firstAttribute="top" secondItem="bxR-h3-9G1" secondAttribute="top" id="9pm-rg-cWM"/>
-                                <constraint firstItem="VQe-i5-GC9" firstAttribute="leading" secondItem="US6-aW-qPp" secondAttribute="trailing" priority="750" constant="20" id="Ib5-kh-1RW"/>
+                                <constraint firstItem="VQe-i5-GC9" firstAttribute="leading" secondItem="US6-aW-qPp" secondAttribute="trailing" priority="750" constant="40" id="Ib5-kh-1RW"/>
                                 <constraint firstItem="US6-aW-qPp" firstAttribute="top" secondItem="bxR-h3-9G1" secondAttribute="top" id="JLJ-Sh-xAo"/>
                                 <constraint firstItem="US6-aW-qPp" firstAttribute="width" secondItem="VQe-i5-GC9" secondAttribute="width" id="Ru0-8g-z45"/>
                                 <constraint firstAttribute="bottom" secondItem="US6-aW-qPp" secondAttribute="bottom" id="XTK-x3-Y2X"/>
@@ -181,47 +190,61 @@
                         </view>
                     </subviews>
                     <constraints>
-                        <constraint firstAttribute="trailing" secondItem="bxR-h3-9G1" secondAttribute="trailing" id="17c-4e-Nga"/>
+                        <constraint firstAttribute="trailing" secondItem="bxR-h3-9G1" secondAttribute="trailing" priority="750" id="17c-4e-Nga"/>
                         <constraint firstItem="7Yj-A5-VUG" firstAttribute="top" secondItem="Zse-ch-S9Z" secondAttribute="top" constant="8" id="4yT-k5-iVP"/>
                         <constraint firstItem="Bbj-3h-KJg" firstAttribute="top" secondItem="tai-hL-gsc" secondAttribute="bottom" constant="10" id="7Zk-YL-1aF"/>
                         <constraint firstItem="bxR-h3-9G1" firstAttribute="leading" secondItem="Zse-ch-S9Z" secondAttribute="leading" id="EuM-EI-pYj"/>
                         <constraint firstAttribute="trailing" secondItem="tai-hL-gsc" secondAttribute="trailing" id="H3j-54-vZn"/>
                         <constraint firstItem="Bbj-3h-KJg" firstAttribute="leading" secondItem="Zse-ch-S9Z" secondAttribute="leading" id="JO0-sO-wQa"/>
+                        <constraint firstAttribute="bottom" secondItem="bxR-h3-9G1" secondAttribute="bottom" constant="8" id="Jxq-gl-nNL"/>
                         <constraint firstItem="tai-hL-gsc" firstAttribute="leading" secondItem="Zse-ch-S9Z" secondAttribute="leading" id="NPU-cl-G6h"/>
                         <constraint firstItem="bxR-h3-9G1" firstAttribute="leading" secondItem="Zse-ch-S9Z" secondAttribute="leading" id="O3U-Bp-4Ak"/>
-                        <constraint firstAttribute="height" constant="473" id="OfA-ff-84B"/>
-                        <constraint firstAttribute="trailing" secondItem="bxR-h3-9G1" secondAttribute="trailing" id="e9E-gj-1aL"/>
+                        <constraint firstAttribute="width" priority="750" constant="364" id="VX8-g0-AXz"/>
+                        <constraint firstAttribute="trailing" secondItem="bxR-h3-9G1" secondAttribute="trailing" priority="750" id="e9E-gj-1aL"/>
                         <constraint firstAttribute="trailing" secondItem="Bbj-3h-KJg" secondAttribute="trailing" id="h4o-Ju-Uby"/>
                         <constraint firstItem="bxR-h3-9G1" firstAttribute="top" secondItem="Bbj-3h-KJg" secondAttribute="bottom" constant="50" id="hMF-32-5ab"/>
                         <constraint firstItem="7Yj-A5-VUG" firstAttribute="leading" secondItem="Zse-ch-S9Z" secondAttribute="leading" constant="8" id="jEg-oV-rkZ"/>
                         <constraint firstItem="tai-hL-gsc" firstAttribute="top" secondItem="7Yj-A5-VUG" secondAttribute="bottom" constant="35" id="taQ-o2-JSw"/>
                     </constraints>
                 </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Jp-aI-pyy">
+                    <rect key="frame" x="116" y="714" width="143" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="WGS-Wr-PxP"/>
+                    </constraints>
+                    <state key="normal" title="Forgot password?">
+                        <color key="titleColor" red="0.85788784898477155" green="0.85788784898477155" blue="0.85788784898477155" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </state>
+                    <connections>
+                        <action selector="didPressedBtn:" destination="-1" eventType="touchUpInside" id="4Lt-u5-p7D"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="0.56223416328430176" green="0.15605652332305908" blue="0.54742133617401123" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="8Jp-aI-pyy" firstAttribute="top" secondItem="Zse-ch-S9Z" secondAttribute="bottom" priority="250" constant="10" id="1qC-V3-yP7"/>
                 <constraint firstItem="8Jp-aI-pyy" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" priority="750" constant="115" id="CYs-t5-mEo"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="8Jp-aI-pyy" secondAttribute="trailing" priority="750" constant="116" id="DNI-pq-vrw"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="YMS-vr-zku" secondAttribute="trailing" id="DVd-Dz-GyO"/>
+                <constraint firstItem="Zse-ch-S9Z" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="Fj7-OA-AaD"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Zse-ch-S9Z" secondAttribute="trailing" constant="25" id="HVI-1n-Jt7"/>
                 <constraint firstItem="8Jp-aI-pyy" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="OBq-nm-Lwo"/>
-                <constraint firstItem="Zse-ch-S9Z" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="25" id="U6I-P2-bsJ"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Zse-ch-S9Z" secondAttribute="trailing" constant="25" id="aPh-dO-l8i"/>
+                <constraint firstItem="Zse-ch-S9Z" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="25" id="XsV-l6-0Bh"/>
                 <constraint firstAttribute="bottom" secondItem="YMS-vr-zku" secondAttribute="bottom" id="dyN-Kn-D4a"/>
-                <constraint firstItem="Zse-ch-S9Z" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="100" id="ecK-b8-Aig"/>
+                <constraint firstItem="Zse-ch-S9Z" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" priority="750" constant="80" id="ecK-b8-Aig"/>
                 <constraint firstItem="YMS-vr-zku" firstAttribute="top" secondItem="8Jp-aI-pyy" secondAttribute="bottom" constant="8" id="fLC-x0-az4"/>
                 <constraint firstItem="YMS-vr-zku" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="lu3-j3-yt1"/>
-                <constraint firstItem="8Jp-aI-pyy" firstAttribute="top" secondItem="Zse-ch-S9Z" secondAttribute="bottom" constant="10" id="xyz-xS-SRv"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <connections>
+                <outlet property="btnForgotPass" destination="8Jp-aI-pyy" id="T8m-HX-jpI"/>
+                <outlet property="btnLogin" destination="US6-aW-qPp" id="SLq-aw-gzx"/>
+                <outlet property="btnRegister" destination="YMS-vr-zku" id="35w-Og-UYJ"/>
+                <outlet property="btnSignInGoogle" destination="VQe-i5-GC9" id="nsx-zO-kza"/>
+                <outlet property="tfEmailAddress" destination="wKN-J0-pdd" id="fgx-U0-by0"/>
+                <outlet property="tfPassword" destination="ISM-uF-nVW" id="bdv-Jk-ZLN"/>
+            </connections>
             <point key="canvasLocation" x="33.5" y="53.5"/>
         </view>
-        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="BYB-4Z-cCj">
-            <rect key="frame" x="0.0" y="0.0" width="56" height="68"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-            <nil key="textColor"/>
-            <nil key="highlightedColor"/>
-            <point key="canvasLocation" x="41" y="436"/>
-        </label>
     </objects>
 </document>
